--- a/project.config
+++ b/project.config
@@ -4,3 +4,4 @@
 	action = inherit
 [access "refs/*"]
 	owner = group ldap/oran-gerrit-sim-f1-interface-committers
+	owner = group saml/oran-gerrit-sim-f1-interface-committers
